#2.15 Partials with Pug

--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -2,8 +2,9 @@ doctype html
 html
     head
         title | WeTube
-    body    
+    body
+        include ../partials/header
         main
             block content
-        footer
-            span &copy; WeTube
+        include ../partials/footer
+        script(src="https://kit.fontawesome.com/70b6710882.js" crossorigin="anonymous") 
