--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -1,7 +1,7 @@
 doctype html
 html
     head
-        title | WeTube
+        title | #{siteName}
     body
         include ../partials/header
         main
