--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,4 +1,4 @@
 footer.footer
     .footer__icon
         i.fab.fa-youtube 
-    span.footer__text Copyright&copy; #{new Date().getFullYear()}. kcm. WeTube.
+    span.footer__text Copyright&copy; #{new Date().getFullYear()}. kcm. #{siteName}.
