--- a/views/home.pug
+++ b/views/home.pug
@@ -1,5 +1,7 @@
 extends layouts/main
+include mixins/videoBlock
 
 block content
     .videos
-        h1 Videos
+        each video in videos
+            +videoBlock(video)
