--- a/views/search.pug
+++ b/views/search.pug
@@ -1,5 +1,9 @@
 extends layouts/main
+include mixins/videoBlock
 
 block content
     .search__header
         h3 Search by #{searchBy}
+    .search__videos
+        each video in videos
+            +videoBlock(video)
