--- a/views/search.pug
+++ b/views/search.pug
@@ -5,5 +5,7 @@ block content
     .search__header
         h3 Search by #{searchBy}
     .search__videos
+        if videos.length === 0
+            h5 No Videos Found
         each video in videos
             +videoBlock(video)
