--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -1,10 +1,12 @@
 doctype html
 html
     head
+        link(rel="stylesheet", href="/static/styles.css")
         title #{pageTitle} | #{siteName}
     body
         include ../partials/header
         main
             block content
         include ../partials/footer
+        script(src="/static/main.js")
         script(src="https://kit.fontawesome.com/70b6710882.js" crossorigin="anonymous") 
