--- a/assets/scss/partials/socialLogin.scss
+++ b/assets/scss/partials/socialLogin.scss
@@ -1,4 +1,4 @@
-.social-login {
+.socialLogin {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -17,11 +17,11 @@
         font-size: 20px;
       }
     }
-    .social-login--github {
+    .social-login__github {
       background-color: $black;
       color: white;
     }
-    .social-login--facebook {
+    .social-login__facebook {
       background-color: #3a5998;
       color: white;
     }
