--- a/views/partials/socialLogin.pug
+++ b/views/partials/socialLogin.pug
@@ -1,8 +1,9 @@
 .socialLogin
     button.social-login__github
-        span 
-            i.fab.fa-github
-        | Continue with GitHub
+        a(href=routes.github)    
+            span 
+                i.fab.fa-github
+            | Continue with GitHub
     button.social-login__facebook
         span 
             i.fab.fa-facebook
