--- a/assets/scss/pages/videoDetail.scss
+++ b/assets/scss/pages/videoDetail.scss
@@ -13,6 +13,11 @@
       width: 100px;
       margin-bottom: 25px;
     }
+    .video__author {
+      a {
+        color: #3498db;
+      }
+    }
     .video__title,
     .video__views,
     .video__description {
@@ -32,8 +37,38 @@
   }
   .video__comments {
     margin-top: 25px;
+    text-align: center;
     .video__comment-number {
       font-size: 18px;
+    }
+    .add__comment {
+      margin-top: 25px;
+      width: 100%;
+      input {
+        width: 100%;
+      }
+    }
+    .video__comments-list {
+      margin-top: 50px;
+      li {
+        background-color: #3498db;
+        color: #fff;
+        padding: 15px 30px;
+        border-radius: 20px;
+        border-bottom-left-radius: 0px;
+        &:not(:last-child) {
+          margin-bottom: 15px;
+        }
+        .delete__comment {
+          cursor: pointer;
+          float: right;
+          margin-left: 15px;
+          i {
+            font-size: 14px;
+            color: #fff;
+          }
+        }
+      }
     }
   }
 }
