--- a/src/assets/scss/pages/userProfile.scss
+++ b/src/assets/scss/pages/userProfile.scss
@@ -10,15 +10,15 @@
     margin-bottom: 18px;
     .profile__username {
       font-size: 16px;
-      margin-top: 50px;
+      margin-top: 15px;
     }
   }
   .user-profile__btns {
     display: flex;
-    flex-direction: column;
     align-items: center;
+    margin-bottom: 30px;
     a:not(:last-child) {
-      margin-bottom: 20px;
+      margin-right: 15px;
     }
   }
 }
